# SeamCarve2022Spring

./: .gitignore  README.md
project/: CMakeLists.txt  header_config.h.in  main.cpp
project/include/: cal_energy.h  image_loader.h  object_removal.h  seam_carver.h  user_interface.h
